--- a/symfony-project/templates/profil/index.html.twig
+++ b/symfony-project/templates/profil/index.html.twig
@@ -42,7 +42,7 @@
 
       <nav class="site-nav">
         <div class="logo">
-          <a href="index.html" class="text-white">Append<span class="text-black">.</span></a>
+          <a href="index.html" class="text-white">AdopteUnDev<span class="text-black">.</span></a>
         </div>
         <div class="row align-items-center">
           
