--- a/symfony-project/templates/profil/index.html.twig
+++ b/symfony-project/templates/profil/index.html.twig
@@ -49,7 +49,7 @@
           
           <div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
             <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-              <li class="active"><a href="index.html">Accueil</a></li>
+              <li class="active"><a href="{{path('app_developer')}}">Accueil</a></li>
               <li class="has-children"><a href="#">Offres</a> </li>
               <li><a href="elements.html">Elements</a></li>
             </ul>
