commit page developper

--- a/symfony-project/templates/developer/offre.html.twig
+++ b/symfony-project/templates/developer/offre.html.twig
@@ -74,7 +74,7 @@
 								<a class="text-black text-bold" href="{{path('app_offre')}}">Offres</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_profil')}}">Matching</a>
+								<a class="text-black text-bold" href="{{path('app_matching')}}">Matching</a>
 							</li>
 							<li>
 								<a class="text-black text-bold" href="">Favoris</a>
@@ -99,8 +99,8 @@
 
 		<div class="section-grey bg-light" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem;">
 			<div class="col-lg-6 text-center">
-				<h4 class="font-weight-bold">Plongez au coeur des métiers</h4>
-				<p class="text-black mb-4" data-aos="fade-up" data-aos-delay="100">Apprenez-en plus sur les métiers et secteurs d’activité et découvrez ce qui vous plait vrai</p>
+				<h4 class="font-weight-bold">Vous pourrez matcher avec ces entreprises</h4>
+				<p class="text-black mb-4" data-aos="fade-up" data-aos-delay="100">Votre avenir se trouve peut-être là !</p>
 			</div>
 
 			<div class="search-bar" style="width: 100%; margin-bottom: 20px;">
