--- a/symfony-project/templates/developer/index.html.twig
+++ b/symfony-project/templates/developer/index.html.twig
@@ -51,18 +51,17 @@
 							<li class="active">
 								<a href="{{path('app_developer')}}">Accueil</a>
 							</li>
-							{# <li class="has-children"><a href="{{path('app_offre')}}">Offres</a> </li> #}
 							<li>
 								<a href="{{path('app_offre')}}">Offres</a>
 							</li>
 							<li>
-								<a href="{{path('app_profil')}}">Matching</a>
+								<a href="{{path('app_matching')}}">Matching</a>
 							</li>
 							<li>
 								<a href="">Favoris</a>
 							</li>
 							<li>
-								<a href="">
+								<a href="{{path('app_auth')}}">
 									<span class="fa fa-user"></span>
 									Mon compte
 								</a>
