--- a/symfony-project/templates/auth/user.html.twig
+++ b/symfony-project/templates/auth/user.html.twig
@@ -13,16 +13,16 @@
 
   <div class="register-container d-flex justify-content-center align-items-center">
     <div class="register-card shadow p-4 rounded">
-      <h2 class="text-center mb-4">Créer un profil</h2>
+      <h2 class="text-center mb-4">Créer un compte</h2>
       <form action="/register" method="POST" enctype="multipart/form-data">
         <!-- Choix du type d'utilisateur -->
-        {# <div class="form-group">
+        <div class="form-group">
           <label for="userType">Vous êtes :</label>
           <select id="userType" name="userType" class="form-control" required>
             <option value="developer">Développeur</option>
             <option value="company">Entreprise</option>
           </select>
-        </div> #}
+        </div>
 
         <!-- Nom et prénom -->
         <div class="form-group">
