--- a/symfony-project/templates/offre/index.html.twig
+++ b/symfony-project/templates/offre/index.html.twig
@@ -91,10 +91,7 @@
 
 				</div>
 			</nav>
-			<!-- END nav -->
-
 		</div>
-		<!-- END container -->
 
 
 		<div class="section-grey bg-light" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem;">
@@ -109,57 +106,57 @@
 					Rechercher
 				</button>
 			</div>
-			<div class="row">
-
-
-				<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-					<div class="blog_entry">
-						<a href="{{path('app_offre')}}"><img src="images/img_h_3-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
-						<div class="p-4 bg-white">
-							<h3>
-								<a href="{{path('app_offre')}}">Far far away, behind the word mountains</a>
-							</h3>
-							<span class="date">April 25, 2019</span>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-							<p class="more">
-								<a href="{{path('app_offre')}}">Continue reading...</a>
-							</p>
+			<div class="container">
+				<div
+					class="row">
+					<!-- Offre 1 -->
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm">
+							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+							<div class="card-body">
+								<h5 class="card-title">Chef de projet SI</h5>
+								<p class="card-text">
+									Stage de 6 mois
+									<br>
+									Nanterre, France
+								</p>
+								<a href="{{ path('app_offre') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+							</div>
 						</div>
 					</div>
-				</div>
-
-				<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-					<div class="blog_entry">
-						<a href="{{path('app_offre')}}"><img src="images/img_h_5-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
-						<div class="p-4 bg-white">
-							<h3>
-								<a href="{{path('app_offre')}}">Far far away, behind the word mountains</a>
-							</h3>
-							<span class="date">April 25, 2019</span>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-							<p class="more">
-								<a href="{{path('app_offre')}}">Continue reading...</a>
-							</p>
+					<!-- Offre 2 -->
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm">
+							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+							<div class="card-body">
+								<h5 class="card-title">Software Developer</h5>
+								<p class="card-text">
+									CDI
+									<br>
+									Boulogne-Billancourt, France
+								</p>
+								<a href="{{ path('app_offre') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+							</div>
 						</div>
 					</div>
-				</div>
-
-				<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-					<div class="blog_entry">
-						<a href="{{path('app_offre')}}"><img src="images/img_h_7-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
-						<div class="p-4 bg-white">
-							<h3>
-								<a href="{{path('app_offre')}}">Far far away, behind the word mountains</a>
-							</h3>
-							<span class="date">April 25, 2019</span>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-							<p class="more">
-								<a href="{{path('app_offre')}}">Continue reading...</a>
-							</p>
+					<!-- Offre 3 -->
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm">
+							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+							<div class="card-body">
+								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
+								<p class="card-text">
+									Stage de 4 à 6 mois
+									<br>
+									Courbevoie, France
+								</p>
+								<a href="{{ path('app_offre') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
 		</div>
 
 
