--- a/symfony-project/templates/auth/index.html.twig
+++ b/symfony-project/templates/auth/index.html.twig
@@ -23,7 +23,7 @@
       </div>
       <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
       <p class="text-center mt-3">
-        Pas encore de compte ? <a href="{{path('app_signin')}}">S'inscrire</a>
+        Pas encore de compte ? <a href="{{path('app_user')}}">S'inscrire</a>
       </p>
     </form>
   </div>
