--- a/symfony-project/templates/matching/match.html.twig
+++ b/symfony-project/templates/matching/match.html.twig
@@ -260,7 +260,7 @@
 											<a href="{{path('app_offre')}}" class="active">Offres</a>
 										</li>
 										<li>
-											<a href="{{path('app_offre')}}">Matching</a>
+											<a href="{{path('app_offre')}}" class="font-weight-bold">Matching</a>
 										</li>
 										<li>
 											<a href="{{path('app_offre')}}">Favoris</a>
@@ -296,16 +296,6 @@
 					</div>
 				</div>
 
-				<div class="text-center" copyright">
-					<div class="col-md-8">
-						<p>Copyright &copy;<script>
-								document.write(new Date().getFullYear());
-							</script>. Tous droits réservés.
-							<a href="{{path('app_offre')}}">Bio Kobena</a>
-						</p>
-
-					</div>
-				</div>
 			</div>
 		</div>
 
