--- a/symfony-project/templates/company/index.html.twig
+++ b/symfony-project/templates/company/index.html.twig
@@ -1,20 +1,354 @@
-{% extends 'base.html.twig' %}
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="author" content="Untree.co">
+		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
 
-{% block title %}Hello CompanyController!{% endblock %}
+		<meta name="description" content=""/>
+		<meta name="keywords" content="Boostrap"/>
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/symfony-project/src/Controller/CompanyController.php</code></li>
-        <li>Your template at <code>/var/www/symfony-project/templates/company/index.html.twig</code></li>
-    </ul>
-</div>
-{% endblock %}
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl.theme.default.min.css">
+		<link rel="stylesheet" href="fonts/icomoon/style.css">
+		<link rel="stylesheet" href="fonts/feather/style.css">
+		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
+		<link rel="stylesheet" href="css/aos.css">
+		<link rel="stylesheet" href="css/style.css">
+
+		<title>AdopteUnDev</title>
+	</head>
+	<body>
+		<div class="container">
+
+
+			<nav class="site-nav">
+				<div class="logo">
+					<a href="index.html" class="text-white">AdopteUnDev<span class="text-black">.</span>
+					</a>
+				</div>
+				<div class="row align-items-center">
+
+					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
+						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
+							<li class="active">
+								<a href="{{path('app_company')}}" class="font-weight-bold">Accueil</a>
+							</li>
+							<li>
+								<a href="{{path('app_profil')}}">Profils</a>
+							</li>
+							<li>
+								<a href="{{path('match-dev')}}">Matching</a>
+							</li>
+							<li>
+								<a href="">Statistiques</a>
+							</li>
+							<li>
+								<a href="{{path('app_auth')}}">
+									<span class="fa fa-user"></span>
+									Mon compte
+								</a>
+							</li>
+						</ul>
+
+					</div>
+
+				</div>
+			</nav>
+			<!-- END nav -->
+
+		</div>
+		<!-- END container -->
+
+
+		<div class="hero-slant overlay" data-stellar-background-ratio="0.5" style="background-image: url(https://img.freepik.com/free-vector/recruitment-concept-illustration_114360-24595.jpg?ga=GA1.1.73765508.1719503126&semt=ais_hybrid)">
+
+			<div class="container">
+				<div class="row align-items-center justify-content-between">
+					<div class="col-lg-7 intro">
+						<h1 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
+							Transformez vos compétences en opportunités exceptionnelles.</h1>
+						<p class="text-white mb-4" data-aos="fade-up" data-aos-delay="100">Nous donnons vie à des projets uniques en connectant des développeurs passionnés à des entreprises visionnaires, créant ainsi un écosystème dynamique d'innovation et de collaboration.</p>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="slant" style="background-image: url('images/slant.svg');"></div>
+		</div>
+
+		<div class="py-3">
+			<div class="container">
+
+				<div class="owl-logos owl-carousel d-flex justify-center align-center">
+
+					<div class="item">
+						<img src="https://telecomnancy.univ-lorraine.fr/wp-content/uploads/2022/10/LOGO-ssg-1024x137.png" alt="Image" class="img-fluid">
+					</div>
+					<div class="item">
+						<img src="https://bim-w.com/wp-content/uploads/3DS_Corp_Logotype_Blue_RGB.png" alt="Image" class="img-fluid">
+					</div>
+					<div class="item">
+						<img src="https://rennesbusinessmag.fr/wp-content/uploads/2021/03/Logo_6TM21.png" alt="Image" class="img-fluid">
+					</div>
+					<div class="item">
+						<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" alt="Image" class="img-fluid">
+					</div>
+					<div class="item">
+						<img src="https://cdn.cookielaw.org/logos/9c9e1da5-cb5e-4789-be00-8f37c0e84ef3/2ffce58c-95ef-42c4-9c00-42881e5a0889/7c02a52b-9889-4293-99bd-553ef548c490/Randstad_Digital_Logo.png" alt="Image" class="img-fluid">
+					</div>
+
+
+				</div>
+
+
+			</div>
+
+		</div>
+
+
+		<div class="site-section bg-light" id="profiles-section">
+			<div class="container">
+				<div class="row text-center mb-5">
+					<h2 class="font-weight-bold">Les derniers profils créés</h2>
+					<p class="text-muted w-100 font-weight-bold">Découvrez les talents récemment inscrits</p>
+				</div>
+				<div class="row">
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm position-relative">
+							<div class="position-relative top-0 end-0 p-3">
+								<img src="https://img.freepik.com/free-photo/portrait-serious-man_23-2148780115.jpg" class="rounded-circle border" style="width: 60px; height: 60px; object-fit: cover;" alt="Profil Avatar">
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">Jean Dupont</h5>
+								<p class="card-text">
+									Développeur Full Stack
+									<br>
+									3 ans d'expérience
+									<br>
+									Paris, France
+								</p>
+								<a href={{path('app_profil')}} class="btn btn-primary text-white btn-sm">Voir le profil</a>
+							</div>
+
+						</div>
+					</div>
+					<div class="col-md-4 col-lg-4 mb-4">
+						<div class="card shadow-sm position-relative">
+							<div class="position-relative top-0 end-0 p-3">
+								<img src="https://img.freepik.com/free-vector/simple-geometric-pastel-tiktok-profile-picture_742173-5465.jpg" class="rounded-circle border" style="width: 60px; height: 60px; object-fit: cover;" alt="Profil Avatar">
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">Marie Lefèvre</h5>
+								<p class="card-text">
+									Data Scientist
+									<br>
+									5 ans d'expérience
+									<br>
+									Lyon, France
+								</p>
+								<a href={{path('app_profil')}} class="btn btn-primary text-white btn-sm">Voir le profil</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm position-relative">
+							<div class="position-relative top-0 end-0 p-3">
+								<img src="https://img.freepik.com/free-photo/closeup-handsome-man_144627-3697.jpg" class="rounded-circle border" style="width: 60px; height: 60px; object-fit: cover;" alt="Profil Avatar">
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">Paul Moreau</h5>
+								<p class="card-text">
+									UX/UI Designer
+									<br>
+									2 ans d'expérience
+									<br>
+									Toulouse, France
+								</p>
+								<a href={{path('app_profil')}} class="btn btn-primary text-white btn-sm">Voir le profil</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-5">
+					<div class="col-lg-4 mx-auto">
+						<a href="" class="btn btn-primary btn-block">Voir tous les profils</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="site-section bg-light" id="profiles-section">
+			<div class="container">
+				<div class="row text-center mb-5">
+					<h2 class="font-weight-bold">Profils les plus consultés</h2>
+					<p class="text-muted w-100 font-weight-bold">Découvrez les plus attirants</p>
+				</div>
+				<div class="row">
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm position-relative">
+							<div class="position-relative top-0 end-0 p-3">
+								<img src="https://img.freepik.com/free-photo/portrait-serious-man_23-2148780115.jpg" class="rounded-circle border" style="width: 60px; height: 60px; object-fit: cover;" alt="Profil Avatar">
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">Jean Dupont</h5>
+								<p class="card-text">
+									Développeur Full Stack
+									<br>
+									3 ans d'expérience
+									<br>
+									Paris, France
+								</p>
+								<a href={{path('app_profil')}} class="btn btn-primary text-white btn-sm">Voir le profil</a>
+							</div>
+
+						</div>
+					</div>
+					<div class="col-md-4 col-lg-4 mb-4">
+						<div class="card shadow-sm position-relative">
+							<div class="position-relative top-0 end-0 p-3">
+								<img src="https://img.freepik.com/free-vector/simple-geometric-pastel-tiktok-profile-picture_742173-5465.jpg" class="rounded-circle border" style="width: 60px; height: 60px; object-fit: cover;" alt="Profil Avatar">
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">Marie Lefèvre</h5>
+								<p class="card-text">
+									Data Scientist
+									<br>
+									5 ans d'expérience
+									<br>
+									Lyon, France
+								</p>
+								<a href={{path('app_profil')}} class="btn btn-primary text-white btn-sm">Voir le profil</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm position-relative">
+							<div class="position-relative top-0 end-0 p-3">
+								<img src="https://img.freepik.com/free-photo/closeup-handsome-man_144627-3697.jpg" class="rounded-circle border" style="width: 60px; height: 60px; object-fit: cover;" alt="Profil Avatar">
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">Paul Moreau</h5>
+								<p class="card-text">
+									UX/UI Designer
+									<br>
+									2 ans d'expérience
+									<br>
+									Toulouse, France
+								</p>
+								<a href={{path('app_profil')}} class="btn btn-primary text-white btn-sm">Voir le profil</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-5">
+					<div class="col-lg-4 mx-auto">
+						<a href="" class="btn btn-primary btn-block">Voir tous les profils</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="site-footer text-white">
+			<div class="container">
+				<div class="row justify-content-between">
+					<div class="col-lg-4">
+						<div class="widget">
+							<h3>À propos</h3>
+							<p>AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
+						</div>
+						<div class="widget">
+							<h3>Connectez-vous avec nous</h3>
+							<ul class="social list-unstyled">
+								<li>
+									<a href="{{path('app_offre')}}">
+										<span class="icon-facebook"></span>
+									</a>
+								</li>
+								<li>
+									<a href="{{path('app_offre')}}">
+										<span class="icon-twitter"></span>
+									</a>
+								</li>
+								<li>
+									<a href="{{path('app_offre')}}">
+										<span class="icon-instagram"></span>
+									</a>
+								</li>
+								<li>
+									<a href="{{path('app_offre')}}">
+										<span class="icon-linkedin"></span>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="row">
+							<div class="col-12">
+								<div class="widget">
+									<h3>Navigation</h3>
+								</div>
+							</div>
+							<div class="col-6 col-sm-6 col-md-4">
+								<div class="widget">
+									<ul class="links list-unstyled">
+										<li>
+											<a href="{{path('app_offre')}}">Accueil</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Profil</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Matching</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Favoris</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Contact</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-6 col-sm-6 col-md-4">
+								<div class="widget">
+									<ul class="links list-unstyled">
+										<li>
+											<a href="{{path('app_offre')}}">À propos de nous</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Politique de confidentialité</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">FAQ</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Carrières</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Support</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+	</body>
+</html></div><div id="overlayer"></div><div class="loader">
+<div class="spinner-border" role="status">
+	<span class="sr-only">Loading...</span>
+
+</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
