--- a/symfony-project/templates/developer/offre.html.twig
+++ b/symfony-project/templates/developer/offre.html.twig
@@ -60,7 +60,7 @@
 		<div class="container w-100" style="margin-bottom:5rem;width:100vw">
 			<nav class="site-nav" style="width:100vw;">
 				<div class="logo">
-					<a class="text-black text-bold">AdopteUnDev<span class="text-black text-bold">.</span>
+					<a class="text-black">AdopteUnDev<span class="text-black">.</span>
 					</a>
 				</div>
 				<div class="row align-items-center">
@@ -68,19 +68,19 @@
 					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
 						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
 							<li>
-								<a class="text-black text-bold" href="{{path('app_developer')}}">Accueil</a>
+								<a class="text-black" href="{{path('app_developer')}}">Accueil</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_offre')}}">Offres</a>
+								<a class="text-black font-weight-bold" href="{{path('app_offre')}}">Offres</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_matching')}}">Matching</a>
+								<a class="text-black" href="{{path('app_matching')}}">Matching</a>
 							</li>
 							<li>
-								<a class="text-black text-bold" href="">Favoris</a>
+								<a class="text-black" href="">Favoris</a>
 							</li>
 							<li>
-								<a class="text-black text-bold" href="">
+								<a class="text-black" href="">
 									<span class="fa fa-user"></span>
 									Mon compte
 								</a>
@@ -250,16 +250,6 @@
 					</div>
 				</div>
 
-				<div class="text-center" copyright">
-					<div class="col-md-8">
-						<p>Copyright &copy;<script>
-								document.write(new Date().getFullYear());
-							</script>. Tous droits réservés.
-							<a href="{{path('app_offre')}}">Bio Kobena</a>
-						</p>
-
-					</div>
-				</div>
 			</div>
 		</div>
 
