--- a/symfony-project/templates/offre/index.html.twig
+++ b/symfony-project/templates/offre/index.html.twig
@@ -60,7 +60,7 @@
 		<div class="container w-100" style="margin-bottom:5rem;width:100vw">
 			<nav class="site-nav" style="width:100vw;">
 				<div class="logo">
-					<a class="text-black text-bold">AdopteUnDev<span class="text-black text-bold">.</span>
+					<a class="text-black">AdopteUnDev<span class="text-black">.</span>
 					</a>
 				</div>
 				<div class="row align-items-center">
@@ -68,19 +68,19 @@
 					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
 						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
 							<li>
-								<a class="text-black text-bold" href="{{path('app_developer')}}">Accueil</a>
+								<a class="text-black" href="{{path('app_developer')}}">Accueil</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_offre')}}">Offres</a>
+								<a class="text-black font-weight-bold" href="{{path('app_offre')}}">Offres</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_matching')}}">Matching</a>
+								<a class="text-black" href="{{path('app_matching')}}">Matching</a>
 							</li>
 							<li>
-								<a class="text-black text-bold" href="">Favoris</a>
+								<a class="text-black" href="">Favoris</a>
 							</li>
 							<li>
-								<a class="text-black text-bold" href="">
+								<a class="text-black" href="">
 									<span class="fa fa-user"></span>
 									Mon compte
 								</a>
@@ -95,11 +95,6 @@
 
 
 		<div class="section-grey bg-light" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem;">
-			<div class="col-lg-6 text-center">
-				<h4 class="font-weight-bold">Vous pourrez matcher avec ces entreprises</h4>
-				<p class="text-black mb-4" data-aos="fade-up" data-aos-delay="100">Votre avenir se trouve peut-être là !</p>
-			</div>
-
 			<div class="search-bar" style="width: 100%; margin-bottom: 20px;">
 				<input type="text" placeholder="Recherchez ici..." class="form-control" style="width: 100%; padding: 15px; font-size: 18px; border-radius: 5px; border: 1px solid #ccc;">
 				<button type="button" class="btn btn-primary" style="padding: 10px 20px; font-size: 18px; border-radius: 0 5px 5px 0; border: none; color: white; cursor: pointer; margin-left:-2rem">
@@ -120,7 +115,7 @@
 									<br>
 									Nanterre, France
 								</p>
-								<a href="{{ path('app_offre') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
 							</div>
 						</div>
 					</div>
@@ -135,7 +130,7 @@
 									<br>
 									Boulogne-Billancourt, France
 								</p>
-								<a href="{{ path('app_offre') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
 							</div>
 						</div>
 					</div>
@@ -150,7 +145,105 @@
 									<br>
 									Courbevoie, France
 								</p>
-								<a href="{{ path('app_offre') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div
+					class="row">
+					<!-- Offre 1 -->
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm">
+							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+							<div class="card-body">
+								<h5 class="card-title">Chef de projet SI</h5>
+								<p class="card-text">
+									Stage de 6 mois
+									<br>
+									Nanterre, France
+								</p>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+							</div>
+						</div>
+					</div>
+					<!-- Offre 2 -->
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm">
+							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+							<div class="card-body">
+								<h5 class="card-title">Software Developer</h5>
+								<p class="card-text">
+									CDI
+									<br>
+									Boulogne-Billancourt, France
+								</p>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+							</div>
+						</div>
+					</div>
+					<!-- Offre 3 -->
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm">
+							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+							<div class="card-body">
+								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
+								<p class="card-text">
+									Stage de 4 à 6 mois
+									<br>
+									Courbevoie, France
+								</p>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div
+					class="row">
+					<!-- Offre 1 -->
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm">
+							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+							<div class="card-body">
+								<h5 class="card-title">Chef de projet SI</h5>
+								<p class="card-text">
+									Stage de 6 mois
+									<br>
+									Nanterre, France
+								</p>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+							</div>
+						</div>
+					</div>
+					<!-- Offre 2 -->
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm">
+							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+							<div class="card-body">
+								<h5 class="card-title">Software Developer</h5>
+								<p class="card-text">
+									CDI
+									<br>
+									Boulogne-Billancourt, France
+								</p>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+							</div>
+						</div>
+					</div>
+					<!-- Offre 3 -->
+					<div class="col-md-6 col-lg-4 mb-4">
+						<div class="card shadow-sm">
+							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+							<div class="card-body">
+								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
+								<p class="card-text">
+									Stage de 4 à 6 mois
+									<br>
+									Courbevoie, France
+								</p>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
 							</div>
 						</div>
 					</div>
@@ -252,7 +345,7 @@
 						<p>Copyright &copy;<script>
 								document.write(new Date().getFullYear());
 							</script>. Tous droits réservés.
-							<a href="{{path('app_offre')}}">Bio Kobena</a>
+							<a href="{{path('app_offre')}}"></a>
 						</p>
 
 					</div>
