--- a/symfony-project/templates/profil/profile.html.twig
+++ b/symfony-project/templates/profil/profile.html.twig
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -21,12 +21,13 @@
 		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
 		<link rel="stylesheet" href="css/aos.css">
 		<link rel="stylesheet" href="css/style.css">
-		<title>Détails de l'offre - VINCI Construction SI</title>
+
+		<title>Job Teaser</title>
 	</head>
 	<body>
 
-		<div class="container w-100" style="margin-bottom:5rem;width:100vw">
-			<nav class="site-nav" style="width:100vw;">
+		<div class="container">
+			<nav class="site-nav">
 				<div class="logo">
 					<a class="text-black text-bold">AdopteUnDev<span class="text-black text-bold">.</span>
 					</a>
@@ -36,22 +37,28 @@
 					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
 						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
 							<li>
-								<a class="text-black text-bold" href="{{path('app_developer')}}">Accueil</a>
+								<a class="text-black text-bold" href="{{path('app_company')}}">Accueil</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_offre')}}">Offres</a>
+								<a class="text-black text-bold font-weight-bold" href="{{path('app_profil')}}">Profils</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_matching')}}">Matching</a>
+								<a class="text-black text-bold" href="{{path('match-dev')}}">Matching</a>
 							</li>
 							<li>
-								<a class="text-black text-bold" href="">Favoris</a>
+								<a class="text-black text-bold" href="">Statistiques</a>
 							</li>
-							<li>
-								<a class="text-black text-bold" href="">
-									<span class="fa fa-user"></span>
-									Mon compte
-								</a>
+
+							<li class="has-children">
+								<a href="#" class="text-black">Mon compte</a>
+								<ul class="dropdown">
+									<li>
+										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('auth-company')}}">Connexion</a>
+									</li>
+									<li>
+										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('signin-company')}}">Inscription</a>
+									</li>
+								</ul>
 							</li>
 						</ul>
 
@@ -61,58 +68,54 @@
 			</nav>
 		</div>
 
-
-		<div class="container mt-5">
-			<div class="card shadow-lg">
-				<div class="card-header bg-primary text-white text-center">
-					<h2 class="mb-0">Chef de projet SI - Stage de fin d'études</h2>
+		<div class="container" style="margin-top:10rem;">
+			
+			<div class="team row">
+				<div class="col-md-4 col-lg-3 pic">
+					<img src="images/person_1-min.jpg" alt="Image" class="w-95 img-fluid">
 				</div>
-				<div
-					class="card-body">
-					<!-- Informations générales -->
-					<h4 class="text-primary">Informations générales</h4>
-					<p>
-						<strong>Localisation :</strong>
-						Nanterre</p>
-					<p>
-						<strong>Type de contrat :</strong>
-						Stage (6 mois)</p>
-					<p>
-						<strong>Date de début :</strong>
-						Février 2025</p>
-					<p>
-						<strong>Niveau d'études requis :</strong>
-						Master, MSc ou Programme Grande École</p>
-					<p>
-						<strong>Télétravail :</strong>
-						Partiel</p>
 
-					<!-- Description de l'entreprise -->
-					<h4 class="text-primary mt-4">Qui sommes-nous ?</h4>
-					<p>
-						Rejoindre les équipes de VINCI Construction SI, c'est participer à la transformation digitale du Groupe au
-												          service des utilisateurs. Nos missions incluent :
-					</p>
-					<ul>
-						<li>La modernisation des outils de gestion et des applications métiers.</li>
-						<li>L'amélioration de la cybersécurité et des infrastructures IT.</li>
-						<li>La construction du futur numérique (IA, BIM, IoT...).</li>
-					</ul>
+				<div class="col-md-8 col-lg-9">
+					<h3>
+						<a href="#">
+							<span class="">Augustin</span>
+							Rio</a>
+					</h3>
 
-					<!-- Avantages pour les stagiaires -->
-					<h4 class="text-primary mt-4">Pourquoi choisir un stage chez VINCI Construction SI ?</h4>
+					<span class="d-block position">Data Scientist Senior</span>
 					<p>
-						Chez VINCI Construction SI, les stagiaires participent pleinement aux enjeux des équipes et des directions. Vous serez intégré(e) à une équipe dynamique où des responsabilités importantes vous seront confiées afin de vous permettre d'évoluer et de monter en compétences.
+						<strong>Localisation:</strong>
+						Paris, France</p>
+
+					<p>
+						<strong>Langages de programmation:</strong>
+						<span class="badge badge-primary">JavaScript</span>
+						<span class="badge badge-secondary">Python</span>
+						<span class="badge badge-success">React</span>
 					</p>
 
-					<!-- Actions -->
-					<div class="text-center mt-4">
-						<a href="{{path('app_success')}}" class="btn btn-primary btn-lg">Candidature simplifiée</a>
-						<a href="{{path('app_success')}}" class="btn btn-outline-primary btn-lg ml-2">Enregistrer</a>
-					</div>
+					<p>
+						<strong>Niveau d'expérience:</strong>
+						<span>5 ans</span>
+
+					</p>
+					<p>
+						<strong>Salaire minimum souhaité:</strong>
+						45000€</p>
 				</div>
+				<div>
+					<p>
+						<strong>Biographie:</strong>
+						Passionné par les technologies web, je possède une expertise approfondie en développement full-stack. Avec une expérience diversifiée, j'ai contribué à plusieurs projets majeurs dans le domaine de la conception et du développement d'applications web, tout en collaborant avec des équipes internationales sur des solutions innovantes.</p>
+				</div>
+
+				<p class="mb-0">
+
+					<a href="mailto:jeremy.walker@example.com" class="btn btn-primary mt-2">Contacter</a>
+				</p>
 			</div>
 		</div>
+
 
 		<div class="site-footer text-white">
 			<div class="container">
@@ -159,7 +162,7 @@
 								<div class="widget">
 									<ul class="links list-unstyled">
 										<li>
-											<a href="{{path('app_developer')}}">Accueil</a>
+											<a href="{{path('app_offre')}}">Accueil</a>
 										</li>
 										<li>
 											<a href="{{path('app_offre')}}">Offres</a>
@@ -200,12 +203,11 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
 		</div>
-
 	</body>
 </html></div><div id="overlayer"></div><div class="loader">
 <div class="spinner-border" role="status">
 	<span class="sr-only">Loading...</span>
-
 </div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
